border collapse - lookup the correct border owner style, bug 196133, r=jkeiser sr=roc+moz